5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1888_1614.log
== TEST (2019-07-09 16:09:01) 
-- CODE:
from numpy import*
from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = array(eval(input("quantidade:")))

for i in range(nomealimento):
	nomealimento[i] = quantidade[i]
calorias = sum(quantidade[i,:])	
print(calorias)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:09:17) 
-- CODE:
from numpy import*
#from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = array(eval(input("quantidade:")))

for i in range(nomealimento):
	nomealimento[i] = quantidade[i]
calorias = sum(quantidade[i,:])	
print(calorias)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:09:32) 
-- CODE:
from numpy import*
#from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = array(eval(input("quantidade:")))

for i in range(nomealimento):
	nomealimento[i] = quantidade[i]
calorias = sum(quantidade[i,:])	
print(calorias)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:10:41) 
-- CODE:
from numpy import*
#from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = int(input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i] = quantidade[i]
calorias = sum(quantidade[i,:])	
print(calorias)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:13:40) 
-- CODE:
from numpy import*
#from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = int(input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = quantidade[i,j]
calorias = sum(quantidade[i,j])	
print(calorias)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:15:19) 
-- CODE:
from numpy import*
#from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = int(input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = quantidade[i,j]
calorias = sum(quantidade[i,j])	

print(round(calorias,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:16:36) 
-- CODE:
from numpy import*
#from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = int(input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = quantidade[i,j]
calorias = sum(quantidade[i,j])	

print(round(calorias,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:13) 
-- CODE:
from numpy import*
from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = (input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = quantidade[i,j]
calorias = sum(quantidade[i,])	

print(round(calorias,1))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:18:23) 
-- CODE:
from numpy import*
#from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = (input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = quantidade[i,j]
calorias = sum(quantidade[i,])	

print(round(calorias,1))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:19) 
-- CODE:
from numpy import*
from numpylinalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = (input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = quantidade[i,j]
calorias = sum(quantidade[i,j])	

print(round(calorias,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:21:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = (input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = quantidade[i,j]
calorias = sum(quantidade[i,j])	

print(round(calorias,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:58) 
-- CODE:
from numpy import*

nomealimento = array(eval(input("nomes dos alimentos:")))
quantidade = (input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = quantidade[i,j]
calorias = sum(quantidade[i,j])	

print(round(calorias,2))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:24:55) 
-- CODE:
from numpy import*

nomealimento = array(eval(input("nomes dos alimentos:")))
kcal = array(eval(input("quantidade:"))

for i in range(nomealimento):
	nomealimento[i,j] = kcal[i,j]
calorias = sum(kcal[i,j])	

print(round(calorias,2))



-- ERROR:
File "XXXX", line 6
    for i in range(nomealimento):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:28) 
-- CODE:
from numpy import*

nomealimento = array(eval(input("nomes dos alimentos:")))
kcal = array(eval(input("kcal/grama:"))

for i in range(nomealimento):
	nomealimento[i,j] = kcal[i,j]
calorias = sum(kcal[i,j])	

print(round(calorias,2))



-- ERROR:
File "XXXX", line 6
    for i in range(nomealimento):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:33) 
-- CODE:
from numpy import*

nomealimento = array(eval(input("nomes dos alimentos:")))
kcal = array(eval(input("kcal/grama:"))

for i in range(nomealimento):
	nomealimento[i,j] = kcal[i,j]
calorias = sum(kcal[i,j])	

print(round(calorias,2))



-- ERROR:
File "XXXX", line 6
    for i in range(nomealimento):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:26:28) 
-- CODE:
from numpy import*

nomealimento = array(eval(input("nomes dos alimentos:")))
kcal = array(eval(input("kcal/grama:"))

for i in range(nomealimento):
	nomealimento[i,j] = kcal[i,j]
	calorias = sum(kcal[i,j])	

print(round(calorias,2))



-- ERROR:
File "XXXX", line 6
    for i in range(nomealimento):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:00) 
-- CODE:
from numpy import*

nomealimento = array(eval(input("nomes dos alimentos:")))
kcal = array(eval(input("kcal/grama:"))

for i in range(nomealimento):
	nomealimento[i,j] = kcal[i,j]
calorias = sum(kcal[i,j])	

print(round(calorias,2))



-- ERROR:
File "XXXX", line 6
    for i in range(nomealimento):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:27:32) 
-- CODE:
from numpy import*

nomealimento = array(eval(input("nomes dos alimentos:")))
kcal = array(eval(input("kcal/grama:"))

for i in range(nomealimento):
	nomealimento[i,j] = kcal[i,j]
calorias = sum(kcal[i,j])	

print(round(calorias,2))



-- ERROR:
File "XXXX", line 6
    for i in range(nomealimento):
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:34:23) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

for i in range(alimento):
	if(alimento == grama):
		caloria = alimento*grama
print(round(caloria,2))		
		
	
				 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:35:44) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

for i in range(alimento):
	if(alimento = grama):
		caloria = alimento*grama

print(round(caloria,2))		
		
	
				 



-- ERROR:
File "XXXX", line 7
    if(alimento = grama):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:36:33) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

for i in range(alimento):
	if(alimento == grama):
		caloria = alimento*grama
x = sum(caloria)		

print(round(caloria,2))		
		
	
				 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:23) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))
kcal = array([[o.97],[2.95],[1.27],[1.04],[0.2]])

for i in range(alimento):
	if(alimento == grama):
		caloria = alimento*grama
x = sum(caloria)		

print(round(caloria,2))		
		
	
				 



-- ERROR:
File "XXXX", line 5
    kcal = array([[o.97],[2.95],[1.27],[1.04],[0.2]])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:40:40) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))
kcal = array([[0.97],[2.95],[1.27],[1.04],[0.2]])

for i in range(alimento):
	if(alimento == grama):
		caloria = alimento*grama
x = sum(caloria)		

print(round(caloria,2))		
		
	
				 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:20) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

for i in range(size(alimento)):
	if(alimento[i] == "BANANA"):
		kcal = 0.97 * grama[i]	

print(round(caloria,2))		
		
	
				 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:44:59) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

quantidade = zeros(size(alimento))
for i in range(size(alimento)):
	if(alimento[i] == "BANANA"):
		quantidade[i] = 0.97 * grama[i]	

print(round(caloria,2))		
		
	
				 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:52:01) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

quantidade = zeros(size(alimento))
for i in range(size(alimento)):
	if(alimento[i] == "BANANA"):
		quantidade[i] = round((0.97 * grama[i]),2)	
	elif(alimento[i] = "BIFE"):
		quantidade[i] = round((2.95* grama[i]),2)
		elif(alimento[i] = "FEIJOADA"):
			quantidade[i] = round((1.27* grama[i]),2)
		elif(alimento[i] = "OMELETE"):
			quantidade[i] = round((1.04* grama[i]),2)
		elif(alimento[i] = "TOMATE")	:
			quantidade[i] = round((0.2 *grama[i]),2)
		

print(quantidade)	
		
	
				 



-- ERROR:
File "XXXX", line 10
    elif(alimento[i] = "BIFE"):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:52:36) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

quantidade = zeros(size(alimento))
for i in range(size(alimento)):
	if(alimento[i] == "BANANA"):
		quantidade[i] = round((0.97 * grama[i]),2)	
	elif(alimento[i] == "BIFE"):
		quantidade[i] = round((2.95* grama[i]),2)
		elif(alimento[i] == "FEIJOADA"):
			quantidade[i] = round((1.27* grama[i]),2)
		elif(alimento[i] == "OMELETE"):
			quantidade[i] = round((1.04* grama[i]),2)
		elif(alimento[i] == "TOMATE")	:
			quantidade[i] = round((0.2 *grama[i]),2)
		

print(quantidade)	
		
	
				 



-- ERROR:
File "XXXX", line 12
    elif(alimento[i] == "FEIJOADA"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:53:25) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

quantidade = zeros(size(alimento))
for i in range(size(alimento)):
	if(alimento[i] == "BANANA"):
		quantidade[i] = round((0.97 * grama[i]),2)	
	elif(alimento[i] == "BIFE"):
		quantidade[i] = round((2.95* grama[i]),2)
	elif(alimento[i] == "FEIJOADA"):
		quantidade[i] = round((1.27* grama[i]),2)
	elif(alimento[i] == "OMELETE"):
		quantidade[i] = round((1.04* grama[i]),2)
	elif(alimento[i] == "TOMATE")	:
		quantidade[i] = round((0.2 *grama[i]),2)
		

print(quantidade)	
		
	
				 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:54:56) 
-- CODE:
from numpy import*

alimento = array(eval(input("nomes dos alimentos:")))
grama = array(eval(input("kcal por grama:")))

quantidade = zeros(size(alimento))
for i in range(size(alimento)):
	if(alimento[i] == "BANANA"):
		quantidade[i] = round((0.97 * grama[i]),2)	
	elif(alimento[i] == "BIFE"):
		quantidade[i] = round((2.95* grama[i]),2)
	elif(alimento[i] == "FEIJOADA"):
		quantidade[i] = round((1.27* grama[i]),2)
	elif(alimento[i] == "OMELETE"):
		quantidade[i] = round((1.04* grama[i]),2)
	elif(alimento[i] == "TOMATE")	:
		quantidade[i] = round((0.2 *grama[i]),2)
		

print(sum(quantidade))	
		
	
				 



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
